--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,16 +5,19 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+      
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3.10.0
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -25,7 +28,7 @@ jobs:
       - name: Build and Publish Docker images
         run: |
           for dir in $(find . -name 'Dockerfile' -exec dirname {} \;); do
-            image_name=$(basename $dir)
-            docker build -t ${{ secrets.DOCKER_USERNAME }}/$image_name:latest $dir
-            docker push ${{ secrets.DOCKER_USERNAME }}/$image_name:latest
+            image_name=$(basename -s / $dir)
+            docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$image_name:latest $dir
+            docker push ${{ secrets.DOCKERHUB_USERNAME }}/$image_name:latest
           done
